[package]
name = "oned"
version = "0.0.1"
edition = "2018"

[dependencies]
deno_core = { git = "https://github.com/denoland/deno" }
derive_deref = "1.1.0"
tokio = { version = "0.2.20", features = ["rt-core", "tcp"] }
log = "0.4.8"
futures = { version = "0.3.4", features = ["thread-pool", "compat"] }

[[bin]]
name = "oned"
path = "oned.rs"
